update ques
